--- a/index.html
+++ b/index.html
@@ -1,1 +1,14 @@
-Hi, I'm HoNooD, an iOS engineer.
+<!DOCTYPE html>
+<html>
+
+<head>
+  <meta charset="utf-8">
+  <title>HoNooD</title>
+</head>
+
+<body>
+  <div>Hi, I'm HoNooD, an iOS engineer.</div>
+  <a href="README.md">test</a>
+</body>
+
+</html>
