--- a/index.html
+++ b/index.html
@@ -3,12 +3,16 @@
 
 <head>
   <meta charset="utf-8">
+  <style type="text/css">
+    * {
+      font-family: PragmataPro, SFMono-Regular, Menlo
+    }
+  </style>
   <title>HoNooD</title>
 </head>
 
 <body>
   <div>Hi, I'm HoNooD, an iOS engineer.</div>
-  <a href="README.md">test</a>
 </body>
 
 </html>
