--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
   <meta charset="utf-8">
   <style type="text/css">
     * {
-      font-family: PragmataPro, SFMono-Regular, Menlo
+      font-family: 'PragmataPro Liga', 'Cascadia Code PL', 'JetBrains Mono', Menlo
     }
   </style>
   <title>HoNooD</title>
 </head>
 
 <body>
-  <div>Hi, I'm HoNooD, an iOS engineer.</div>
+  <div>Hi, I'm HoNooD, a developer. Nice to see you.</div>
 </body>
 
 </html>
