--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
 </head>
 
 <body>
-  <div>Hi, I'm HoNooD, a developer. Nice to see you.</div>
+  <p>Welcome to <span style='text-decoration: none'><a href='https://honood.net/'>honood.net</a></span></p>
+  <p>Hi, I'm HoNooD, a developer.</p>
 </body>
 
 </html>
