--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-  <p>Welcome to <span style='text-decoration: none'><a href='https://honood.net/'>honood.net</a></span></p>
+  <p>Welcome to <a href='https://honood.net/'>honood.net</a>.</p>
   <p>Hi, I'm HoNooD, a developer.</p>
 </body>
 
