--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 </head>
 
 <body>
+  <p>Hi, I'm HoNooD, a programmer from China.</p>
   <p>Welcome to <a href='https://honood.net/'>honood.net</a>.</p>
-  <p>Hi, I'm HoNooD, a developer.</p>
 </body>
 
 </html>
